# crossfiledialog

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  setup.cfg  setup.py  test.py
crossfiledialog/: __init__.py  exceptions.py  kdialog.py  osascript.py  strings.py  win32.py  wrapper.py  zenity.py
filedialog/: __init__.py  kdialog.py  win32.py  wrapper.py  zenity.py
